apps/nimbus-platform/overlays/aws-prod/patch-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nimbus-platform
spec:
  replicas: 4
  strategy:
    canary:
      canaryService: nimbus-platform-canary
      stableService: nimbus-platform-stable
      trafficRouting:
        nginx:
          stableIngress: nimbus-platform
      maxSurge: 25%
      maxUnavailable: 0
      abortScaleDownDelaySeconds: 30
      steps:
        - setWeight: 10
        - pause:
            duration: 120s
        - setWeight: 30
        - pause:
            duration: 180s
        - setWeight: 60
        - pause:
            duration: 300s
        - setWeight: 100
