apps/nimbus-platform/overlays/aws-prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nimbus-platform
spec:
  rules:
    - host: nimbus-aws-prod.example.internal
